# raydar

./: .gitignore  BUILDING.md  Cargo.toml  README.md
scenes/: benchmark.rscn  default.rscn
shaders/vulkan/: common.glsl  raytrace.miss  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace_sphere.rchit
src/: lib.rs  main.rs
src/cli/: mod.rs
src/renderer/: cpu.rs  mod.rs  timing.rs  vulkan.rs
src/scene/: benchmark.rs  camera.rs  material.rs  mod.rs  objects.rs  world.rs
src/utils/: mod.rs
src/widgets/: inspector.rs  mod.rs  scene.rs  viewport.rs
