[package]
name = "raydar"
version = "0.1.0"
edition = "2021"
default-run = "raydar"

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
color-eyre = { version = "0.6.3", default-features = false }
eframe = "0.29.1"
egui = "0.29.1"
image = "0.25.4"
ordered-float = "4.5.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
rand = "0.8.5"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.28", features = ["derive", "cargo"] }
